[package]
name = "rvu"
version = "0.1.0"
edition = "2021"
authors =["Matt Davies"]
description ="an image viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
image = "0.24.3"

thiserror = "1.0.34"
winit = "0.27.3"
